# elven-canopy

./: .gdlintrc  .gitignore  CLAUDE.md  Cargo.toml  README.md  default_config.json  elven_canopy_design_doc_v2.md  rustfmt.toml
.claude/: settings.json
.claude/commands/: doc-review.md  merge-to-main.md  once-over.md  rebase-onto-main.md  repeated-doc-review.md
.github/workflows/: build-and-package.yml  ci.yml  lint.yml
data/: markov_models.json  motif_library.json  species_encyclopedia.json  vaelith_lexicon.json
docs/: code_quality_plan.md  codebase_patterns.md  construction_roadmap.md  design_doc.md  frame_pipeline.md  game-mechanics.md  godot_scroll_sizing.md  implementation_status.md  items.md  iterative_optimization.md  music_generator.md  organic_tree_vision.md  project_structure.md  puppet_guide.md  tabulosity.md  tracker.md
docs/drafts/: F-ai-test-harness.md  F-bldg-dining.md  F-bridge-integ-tests-and-ai-test-harness.md  F-creature-skills.md  F-elf-paths.md  F-group-dance.md  F-item-quality.md  F-tab-hash-idx.md  F-taming.md  F-zone-schema.md  armor.md  attack_move.md  combat_military.md  conlang_brainstorm.md  construction_tree_overlap.md  controls_config.md  creature_actions.md  creature_stats.md  elfcyclopedia_civs.md  encyclopedia_civs.md  fruit_naming.md  fruit_variety.md  genetics.md  group_activities.md  hierarchical-nav-oracle.md  kitchen_cooking.md  lang_crate.md  llm-creatures.md  logistics_material_filter.md  military_groups.md  mobile_support.md  modify_unchecked_v1.md  multiplayer_relay.md  palestrina_generator_v2.md  parallel_dedup.md  placement_ui.md  recipe_params.md  rle_voxels.md  schema_migrations.md  session_state_machine.md  (+31 more)
docs/once-over/: code-quality.md  corner-cases.md  spec-adherence.md  test-coverage.md
docs/optimization-diaries/: mesh-pipeline-perf.md
elven_canopy_gdext/: Cargo.toml
elven_canopy_gdext/src/: elfcyclopedia_server.rs  encyclopedia_server.rs  lib.rs  llm_worker.rs  mesh_cache.rs  net_client.rs  session_browser.rs  sim_bridge.rs  sprite_bridge.rs
elven_canopy_graphics/: Cargo.toml
elven_canopy_graphics/benches/: mesh_pipeline.rs
elven_canopy_graphics/src/: chunk_neighborhood.rs  lib.rs  mesh_decimation.rs  mesh_gen.rs  smooth_mesh.rs  texture_gen.rs
elven_canopy_graphics/tests/: mesh_snapshots.rs
elven_canopy_lang/: Cargo.toml
elven_canopy_lang/src/: lib.rs  names.rs  phonotactics.rs  types.rs
elven_canopy_llm/: Cargo.toml
elven_canopy_llm/src/: engine.rs  lib.rs
elven_canopy_music/: Cargo.toml
elven_canopy_music/src/: draft.rs  generate.rs  grid.rs  lib.rs  lilypond.rs  main.rs  markov.rs  midi.rs  mode.rs  sa.rs  scoring.rs  structure.rs  synth.rs  text_mapping.rs  vaelith.rs
elven_canopy_prng/: Cargo.toml
elven_canopy_prng/src/: lib.rs
elven_canopy_protocol/: Cargo.toml
elven_canopy_protocol/src/: framing.rs  lib.rs  message.rs  types.rs
elven_canopy_relay/: Cargo.toml
elven_canopy_relay/src/: client.rs  lib.rs  main.rs  server.rs  session.rs
elven_canopy_relay/tests/: smoke_test.rs
elven_canopy_sim/: Cargo.toml
elven_canopy_sim/benches/: mesh_pipeline.rs
elven_canopy_sim/src/: blueprint.rs  building.rs  checksum.rs  chunk_neighborhood.rs  command.rs  config.rs  dance.rs  db.rs  event.rs  flight_pathfinding.rs  fruit.rs  genome.rs  inventory.rs  lib.rs  llm.rs  local_relay.rs  lookup_map.rs  mesh_decimation.rs  mesh_gen.rs  mesh_smooth.rs  nav.rs  pathfinding.rs  preemption.rs  prng.rs  projectile.rs  prompt.rs  recipe.rs  session.rs  sim.rs  smooth_mesh.rs  social_chat.rs  species.rs  stats.rs  structural.rs  task.rs  texture_gen.rs  tree_gen.rs  tree_mesh.rs  types.rs  walkability.rs  (+2 more)
elven_canopy_sim/src/sim/: activation.rs  activity.rs  combat.rs  construction.rs  crafting.rs  creature.rs  grazing.rs  greenhouse.rs  inventory_mgmt.rs  logistics.rs  mod.rs  movement.rs  needs.rs  paths.rs  raid.rs  skills.rs  social.rs  taming.rs  task_helpers.rs  tests.rs
elven_canopy_sim/src/sim/tests/: activation_tests.rs  activity_tests.rs  combat_tests.rs  commands_tests.rs  construction_tests.rs  crafting_tests.rs  creature_tests.rs  dinner_party_tests.rs  diplomacy_tests.rs  equipment_tests.rs  flee_tests.rs  foraging_tests.rs  grazing_tests.rs  greenhouse_tests.rs  hp_tests.rs  inventory_tests.rs  llm_tests.rs  logistics_tests.rs  mana_tests.rs  mod.rs  mood_tests.rs  movement_tests.rs  needs_tests.rs  paths_tests.rs  raid_tests.rs  skills_tests.rs  social_chat_tests.rs  social_dance_tests.rs  social_tests.rs  taming_tests.rs  test_helpers.rs  worldgen_tests.rs
elven_canopy_sim/tests/: mesh_snapshots.rs
elven_canopy_sprites/: Cargo.toml
elven_canopy_sprites/src/: color.rs  drawing.rs  fruit.rs  lib.rs  species.rs
elven_canopy_utils/: Cargo.toml
elven_canopy_utils/benches/: dedup.rs
elven_canopy_utils/src/: fixed.rs  lib.rs  parallel_dedup.rs
godot/: .gutconfig.json  elven_canopy.gdextension  elven_canopy.gdextension.uid  export_presets.cfg  mesh_config.json  project.godot
godot/scenes/: host_game.tscn  join_game.tscn  main.tscn  main_menu.tscn  multiplayer_menu.tscn  new_game.tscn
godot/scripts/: action_toolbar.gd  activity_utils.gd  bed_renderer.gd  blueprint_renderer.gd  building_renderer.gd  (+74 more)
multiplayer_tests/: Cargo.toml
multiplayer_tests/src/: lib.rs
multiplayer_tests/tests/: full_pipeline.rs
python/: corpus_analysis.py  rate_midi.py  requirements-dev.txt  requirements.txt
scripts/: build.py  build.sh  fix_tracker.py  puppet.py  tracker.py  wait-for-ci.sh
tabulosity/: Cargo.toml  README.md
tabulosity/src/: crc.rs  error.rs  ins_ord_hash_map.rs  lib.rs  one_or_many.rs  spatial.rs  table.rs
tabulosity/tests/: auto_increment.rs  basic_table.rs  bounded.rs  checksummed.rs  checksummed_serde.rs  compound_pk.rs  compound_pk_database.rs  compound_pk_serde.rs  database.rs  hash_index.rs  indexed_table.rs  ins_ord_hash_map.rs  modify_unchecked.rs  nonpk_auto_database.rs  nonpk_auto_increment.rs  nonpk_auto_increment_serde.rs  parent_pk.rs  parent_pk_serde.rs  query_opts.rs  serde.rs  spatial_index.rs  unique_index.rs
tabulosity_derive/: Cargo.toml
(+51 files in other folders)
