[workspace]
members = [
    "elven_canopy_prng",
    "elven_canopy_lang",
    "elven_canopy_sim",
    "elven_canopy_gdext",
    "elven_canopy_music",
    "elven_canopy_protocol",
    "elven_canopy_relay",
    "multiplayer_tests",
    "tabulosity",
    "tabulosity_derive",
]
resolver = "2"

[profile.dev]
opt-level = 0

# Optimized release profile for the standalone relay binary.
# LTO + single codegen unit for minimal binary size and maximum performance.
# strip = true removes debug symbols for deployment.
[profile.relay-release]
inherits = "release"
lto = true
codegen-units = 1
strip = true

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
