[package]
name = "elven_canopy_gdext"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
elven_canopy_music = { path = "../elven_canopy_music" }
elven_canopy_protocol = { path = "../elven_canopy_protocol" }
elven_canopy_relay = { path = "../elven_canopy_relay" }
elven_canopy_sim = { path = "../elven_canopy_sim" }
godot = { version = "0.4.5", features = ["api-4-5"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
