[package]
name = "elven_canopy_gdext"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
elven_canopy_music = { path = "../elven_canopy_music" }
elven_canopy_protocol = { path = "../elven_canopy_protocol" }
elven_canopy_relay = { path = "../elven_canopy_relay" }
elven_canopy_graphics = { path = "../elven_canopy_graphics" }
elven_canopy_sim = { path = "../elven_canopy_sim" }
elven_canopy_sprites = { path = "../elven_canopy_sprites" }
godot = { version = "0.4.5", features = ["api-4-5"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"

# GPU backend for LLM inference: Vulkan on Windows/Linux, Metal on Mac.
[target.'cfg(target_os = "macos")'.dependencies]
elven_canopy_llm = { path = "../elven_canopy_llm", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
elven_canopy_llm = { path = "../elven_canopy_llm", features = ["vulkan"] }
