[package]
name = "elven_canopy_graphics"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
elven_canopy_sim = { path = "../elven_canopy_sim" }
rustc-hash = "2"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "mesh_pipeline"
harness = false
