[package]
name = "elven_canopy_llm"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
llama-cpp-2 = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "test_inference"
path = "src/bin/test_inference.rs"

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
vulkan = ["llama-cpp-2/vulkan"]
metal = ["llama-cpp-2/metal"]
rocm = ["llama-cpp-2/rocm"]
