[package]
name = "elven_canopy_music"
version = "0.1.0"
edition = "2024"
description = "Palestrina-style polyphonic music generator for Elven Canopy"

[lints]
workspace = true

[[bin]]
name = "generate"
path = "src/main.rs"

[dependencies]
elven_canopy_prng = { path = "../elven_canopy_prng" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
midly = "0.5"
