[package]
name = "elven_canopy_sim"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = ["serde"]
serde = []

[dependencies]
elven_canopy_prng = { path = "../elven_canopy_prng" }
elven_canopy_lang = { path = "../elven_canopy_lang" }
tabulosity = { path = "../tabulosity", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
