[package]
name = "tabulosity"
version = "0.1.0"
edition = "2024"

[dependencies]
tabulosity_derive = { path = "../tabulosity_derive" }
crc32fast = "1"
rstar = "0.12"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
